--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section id="about" class="about">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 text-center editable">
                     <h2>Ласкаво просимо до української спільноти OpenStreetMap!</h2>
                 </div>
                 <div class="col-lg-12 text-justify">
