Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
     <title>OpenStreetMap Україна</title>
 
-    <link rel=icon href=favicon.png sizes="16x16" type="image/png">
+    <link rel=icon href=favicon.png sizes="16x16" type="image/png" />
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Custom CSS -->
-    <link href="css/stylish-portfolio.css" rel="stylesheet">
+    <link href="css/stylish-portfolio.css" rel="stylesheet" />
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" />
 
     <!-- mapbox.js -->
     <script src='https://api.tiles.mapbox.com/mapbox.js/v2.2.1/mapbox.js'></script>
@@ -44,22 +44,22 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top"  onclick = $("#menu-close").click(); >OSM Україна</a>
+                <a href="#top" onclick=$("#menu-close").click();>OSM Україна</a>
             </li>
             <li>
-                <a href="#top" onclick = $("#menu-close").click(); >Головна</a>
+                <a href="#top" onclick=$("#menu-close").click();>Головна</a>
             </li>
             <li>
-                <a href="#about" onclick = $("#menu-close").click(); >Про проект</a>
+                <a href="#about" onclick=$("#menu-close").click();>Про проект</a>
             </li>
             <li>
-                <a href="#services" onclick = $("#menu-close").click(); >Що далі?</a>
+                <a href="#services" onclick=$("#menu-close").click();>Що далі?</a>
             </li>
             <li>
-                <a href="#portfolio" onclick = $("#menu-close").click(); >Дізнатись ще</a>
+                <a href="#portfolio" onclick=$("#menu-close").click();>Дізнатись ще</a>
             </li>
             <li>
-                <a href="#contact" onclick = $("#menu-close").click(); >Мапа</a>
+                <a href="#contact" onclick=$("#menu-close").click();>Мапа</a>
             </li>
         </ul>
     </nav>
@@ -70,10 +70,10 @@
           <div class="main-title">
             <h1>OpenStreetMap Україна</h1>
             <h3>Вільна мапа – створювати яку може кожен</h3>
-            <br>
+            <br />
             <a href="#about" class="btn btn-dark btn-lg">Дізнайтесь більше</a>
           </div>
-            <a class="text-left-bottom btn btn-dark"target="_blank" href="https://www.facebook.com/gleb.dobarin">Дніпропетровськ, День міста, 2014 &copy;Гліб Добарін</a>
+            <a class="text-left-bottom btn btn-dark" target="_blank" href="https://www.facebook.com/gleb.dobarin">Дніпропетровськ, День міста, 2014 &copy;Гліб Добарін</a>
         </div>
     </header>
 
@@ -81,9 +81,7 @@
     <section id="about" class="about">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center editable">
-                    <h2>Ласкаво просимо до української спільноти OpenStreetMap!</h2>
-                </div>
+                <div class="col-lg-12 text-center editable"><h2>See you can edit this visually using Cloud Cannon!!!&nbsp;Ласкаво просимо до української спільноти OpenStreetMap!</h2></div>
                 <div class="col-lg-12 text-justify">
                     <p class="lead"><a target="_blank" href="http://openstreetmap.org/">OpenStreetMap</a>&nbsp;– міжнародний проект метою якого є створення вільної, відкритої мапи світу!</p>
                     <p class="lead">Велика кількість учасників по всьому світу прямо зараз додають дані про місцевисть в якій вони живуть, допомагають наповнити мапу даними про об’єкти інфраструктури поруч з ними, приймають участь у створенні мапи для допомоги постраждалим у зонах стихійних лих, катастроф й таке інше.</p>
@@ -104,7 +102,7 @@
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
                     <h2>Що далі?</h2>
-                    <hr class="small">
+                    <hr class="small" />
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
@@ -155,7 +153,7 @@
                                     <strong>Контроль якості</strong>
                                 </h4>
                                 <p>Інструменти перевірки та підтримання якості наших даних.</p>
-                                <a target="_blank"  href="https://pavlo-dudka.github.io/osm-pg-tests/" class="btn btn-light">Перейти</a>
+                                <a target="_blank" href="https://pavlo-dudka.github.io/osm-pg-tests/" class="btn btn-light">Перейти</a>
                             </div>
                         </div>
                     </div>
@@ -181,15 +179,15 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2>Дізнатись ще</h2>
-                    <hr class="small">
+                    <hr class="small" />
                     <div class="row">
                         <div class="col-md-6">
                             <div class="text-vertical-center">
                               <h3>Контакти</h3>
                             </div>
                             <div class="portfolio-item">
-                                <a target="_blank"  href="http://wiki.openstreetmap.org/wiki/Uk:Contact">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                                <a target="_blank" href="http://wiki.openstreetmap.org/wiki/Uk:Contact">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg" />
                                 </a>
                             </div>
                         </div>
@@ -198,8 +196,8 @@
                             <h3>Вікі OpenStreetMap</h3>
                           </div>
                             <div class="portfolio-item">
-                                <a target="_blank"  href="http://wiki.openstreetmap.org/wiki/Uk:Main_Page">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                                <a target="_blank" href="http://wiki.openstreetmap.org/wiki/Uk:Main_Page">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg" />
                                 </a>
                             </div>
                         </div>
@@ -208,8 +206,8 @@
                               <div class="text-vertical-center">
                                 <h3>Форум</h3>
                               </div>
-                                <a target="_blank"  href="http://forum.openstreetmap.org/viewforum.php?id=40">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
+                                <a target="_blank" href="http://forum.openstreetmap.org/viewforum.php?id=40">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg" />
                                 </a>
                             </div>
                         </div>
@@ -218,8 +216,8 @@
                               <div class="text-vertical-center">
                                 <h3>Інструменти</h3>
                               </div>
-                                <a target="_blank"  href="https://josm.openstreetmap.de/wiki/Uk%3AWikiStart">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
+                                <a target="_blank" href="https://josm.openstreetmap.de/wiki/Uk%3AWikiStart">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg" />
                                 </a>
                             </div>
                         </div>
@@ -299,13 +297,13 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>Українська спільнота OpenStreetMap</strong>
                     </h4>
-                    <p>Україна<br>ми поруч з вами</p>
+                    <p>Україна<br />ми поруч з вами</p>
                     <!-- <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com">name@example.com</a>
                         </li>
                     </ul>-->
-                    <br>
+                    <br />
                     <ul class="list-inline">
                         <li>
                             <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
@@ -317,7 +315,7 @@
                             <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
-                    <hr class="small">
+                    <hr class="small" />
                     <p class="text-muted">Авторське право &copy; OpenStretMap Україна, 2015</p>
                     <p class="text-muted">Шаблон &copy; Stylish Portfolio by <a target="_blank" href="http://startbootstrap.com/template-overviews/stylish-portfolio/">Start Bootstrap</a></p>
                 </div>
