Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
           <div class="main-title">
-            <h1 class="editable">OpenStreetMap Україна $$$</h1>
+            <h1 class="editable">OpenStreetMap Україна&nbsp;</h1>
             <h3>Вільна мапа – створювати яку може кожен</h3>
             <br />
             <a href="#about" class="btn btn-dark btn-lg">Дізнайтесь більше</a>
